--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "electron": "^1.8.4"
+        "@types/electron": "^1.6.10",
+        "@types/node": "^12.0.12",
+        "electron": "^6.0.1"
     }
 }
